{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 369,
  "lineage": "88a70107-3832-33c5-8e7d-87363b02f2b1",
  "resources": [
    {
      "module": "module.igws",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:internet-gateway/igw-002f08de75aa37142",
            "id": "igw-002f08de75aa37142",
            "owner_id": "149028371915",
            "tags": {
              "Name": "PLANK-PARIS-VPC1-IGW"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-IGW"
            },
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-002f08de75aa37142",
            "id": "r-rtb-058b7fc188b1592631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-058b7fc188b159263",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igws.aws_internet_gateway.main",
            "module.route_tables.aws_route_table.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:route-table/rtb-058b7fc188b159263",
            "id": "rtb-058b7fc188b159263",
            "owner_id": "149028371915",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-002f08de75aa37142",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PLANK-PARIS-VPC1-PublicRouteTable"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4174db530b6cfbd",
            "route_table_id": "rtb-058b7fc188b159263",
            "subnet_id": "subnet-0851733b9c5e5c330"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a19f7dc7df5f6cdb",
            "route_table_id": "rtb-058b7fc188b159263",
            "subnet_id": "subnet-0db9a725721abac12"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f8f4b825cf8167e",
            "route_table_id": "rtb-058b7fc188b159263",
            "subnet_id": "subnet-00b1aaed2c3df396d"
          },
          "dependencies": [
            "module.route_tables.aws_route_table.public",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:security-group/sg-0aa224df3fad46e67",
            "description": "Security group for Bastion instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa224df3fad46e67",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "PLANK-PARIS-VPC1-SG-EC2-Bastion",
            "name_prefix": "",
            "owner_id": "149028371915",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PLANK-PARIS-VPC1-SG-EC2-Bastion"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-SG-EC2-Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "docker_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:security-group/sg-027aaa7099480b18b",
            "description": "Security group for Docker instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027aaa7099480b18b",
            "ingress": [],
            "name": "PLANK-PARIS-VPC1-SG-EC2-Docker",
            "name_prefix": "",
            "owner_id": "149028371915",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PLANK-PARIS-VPC1-SG-EC2-Docker"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-SG-EC2-Docker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:security-group/sg-0ef073e2dd068a3d9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef073e2dd068a3d9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "PLANK-PARIS-VPC1-SG-LB-Bastion",
            "name_prefix": "",
            "owner_id": "149028371915",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PLANK-PARIS-VPC1-SG-LB-Bastion"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-SG-LB-Bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_docker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:security-group/sg-09662990063f685f4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09662990063f685f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow MySQL traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "PLANK-PARIS-VPC1-SG-LB-Docker",
            "name_prefix": "",
            "owner_id": "149028371915",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "PLANK-PARIS-VPC1-SG-LB-Docker"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-SG-LB-Docker"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:subnet/subnet-0bac1321fc9d2ba7d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bac1321fc9d2ba7d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149028371915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PLANK-PARIS-VPC1-AZ1-PrivateSubnet1-EC2-Docker"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-AZ1-PrivateSubnet1-EC2-Docker"
            },
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:subnet/subnet-06b5e1c9d2637253f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b5e1c9d2637253f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149028371915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PLANK-PARIS-VPC1-AZ2-PrivateSubnet2-EC2-Docker"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-AZ2-PrivateSubnet2-EC2-Docker"
            },
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:subnet/subnet-0f58a7983ad5b4389",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f58a7983ad5b4389",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "149028371915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PLANK-PARIS-VPC1-AZ3-PrivateSubnet3-EC2-Docker"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-AZ3-PrivateSubnet3-EC2-Docker"
            },
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:subnet/subnet-0851733b9c5e5c330",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0851733b9c5e5c330",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149028371915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PLANK-PARIS-VPC1-AZ1-PublicSubnet1-EC2-Bastion"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-AZ1-PublicSubnet1-EC2-Bastion"
            },
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:subnet/subnet-0db9a725721abac12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db9a725721abac12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149028371915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PLANK-PARIS-VPC1-AZ2-PublicSubnet2-EC2-Bastion"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-AZ2-PublicSubnet2-EC2-Bastion"
            },
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:subnet/subnet-00b1aaed2c3df396d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b1aaed2c3df396d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "149028371915",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PLANK-PARIS-VPC1-AZ3-PublicSubnet3-EC2-Bastion"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1-AZ3-PublicSubnet3-EC2-Bastion"
            },
            "vpc_id": "vpc-0a9dda8a33f55ef3b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:149028371915:vpc/vpc-0a9dda8a33f55ef3b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061217f9a263c19ed",
            "default_route_table_id": "rtb-066b3279d994681f7",
            "default_security_group_id": "sg-09807147c2ce292d6",
            "dhcp_options_id": "dopt-08269b10ef02d266f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a9dda8a33f55ef3b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066b3279d994681f7",
            "owner_id": "149028371915",
            "tags": {
              "Name": "PLANK-PARIS-VPC1"
            },
            "tags_all": {
              "Name": "PLANK-PARIS-VPC1"
            }
          }
        }
      ]
    }
  ]
}